--- a/server/public/index.html
+++ b/server/public/index.html
@@ -45,10 +45,11 @@ new WOW().init();
       z-index: 900;
     }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.2/Chart.js"></script>
-    <script src="js/angular-chart.min.js"></script>
+    <script src="js/Chart.js"></script>
     <script type="text/javascript" src="js/angular.min.js">
 </script>
+    <script src="js/angular-chart.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js" type="text/javascript">
 </script>
     <script type="text/javascript" src="js/app.js">
